jekyll up to date

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Grace
 email: grace@gracez.me
-description: Grace Z.'s Website
+description: Learn more about Grace Z.!
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://gracez.me" # the base hostname & protocol for your site
 twitter_username: gzgracez
@@ -9,3 +9,4 @@ github_username:  gzgracez
 
 # Build settings
 markdown: kramdown
+keep_files: ["css/bootstrap.min.css", "css/one.css"]
