--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Grace
 email: grace@gracez.me
 description: Learn more about Grace Z.!
-, "css/one.css"baseurl: "" # the subpath of your site, e.g. /blog/
+baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://gracez.me" # the base hostname & protocol for your site
 twitter_username: gzgracez
 github_username:  gzgracez
